# models/__init__.py
@@ -1,8 +1,9 @@
 from .user_model import User, Role
 from .sales_model import Sale
-from .bank_model import Bank, Branch
+from .bank_model import Bank, BankBranch
 from .paypoint_model import Paypoint
 from .impact_product_model import ImpactProduct
 from .sales_executive_model import SalesExecutive
 from .audit_model import AuditTrail
 from .under_investigation_model import UnderInvestigation
+from .branch_model import Branch
