# models/branch_model.py
@@ -2,17 +2,19 @@ from app import db
 from datetime import datetime
 
 class Branch(db.Model):
+    __tablename__ = 'branch'  # Explicitly set the table name to avoid conflicts
     id = db.Column(db.Integer, primary_key=True)
     name = db.Column(db.String(100), nullable=False, unique=True, index=True)
     address = db.Column(db.String(255), nullable=True)
     city = db.Column(db.String(100), nullable=True)
     region = db.Column(db.String(100), nullable=True)
     ghpost_gps = db.Column(db.String(100), nullable=True)
-    is_deleted = db.Column(db.Boolean, default=False, index=True)  # Soft delete
+    is_deleted = db.Column(db.Boolean, default=False, index=True)
     created_at = db.Column(db.DateTime, default=datetime.utcnow)
     updated_at = db.Column(db.DateTime, onupdate=datetime.utcnow)
 
     users = db.relationship('User', backref='branch', lazy=True)
+    sales_executives = db.relationship('SalesExecutive', backref='branch', lazy=True)
 
     def serialize(self):
         return {
@@ -25,5 +27,6 @@ class Branch(db.Model):
             'is_deleted': self.is_deleted,
             'created_at': self.created_at.isoformat(),
             'updated_at': self.updated_at.isoformat() if self.updated_at else None,
-            'users': [user.id for user in self.users]  # Serialize user IDs associated with this branch
+            'users': [user.id for user in self.users],
+            'sales_executives': [sales_executive.id for sales_executive in self.sales_executives]
         }
